# genrerip

./: pyproject.toml
genrerip/: __init__.py  __main__.py  search.py
genrerip/data/: genres.json
genrerip/sources/: __init__.py  lastfm.py  musicbrainz.py
